# Imager.Cameras

./: SC Command Template.pxp  meson.build
ImagerPluginCore/: BaseCameraClass.cpp  BaseCameraClass.h  CameraPropertiesEncoding.cpp  PluginManager.h
SDK/OldPVCam/: Cascade 512B notes.txt
VC12/: SCCameraXOP.sln  SCCameraXOP.vcxproj
VS2013/: SCCameraXOP.vcxproj
VS2017/: SCCameraXOP.sln  SCCameraXOP.vcxproj
include/DCAM/: dcamapi.h  dcamapi3.h  dcamprop.h
include/IPP2017/: ippcore.h  ippcore_l.h  ippcore_tl.h  ippcv.h  ippcv_l.h  ippdc.h  ippdefs.h  ippdefs_l.h  ippi.h  ippi_l.h  ippi_tl.h  ipps.h  ipps_l.h  ipptypes.h  ipptypes_l.h  ippversion.h
include/PCO/: PCO_err.h  PCO_errt.h  SC2_CamExport.h  pco_convdlgexport.h  pco_convexport.h  pco_convstructures.h  pco_err.h  pco_errtext.h  pco_filestruct.h  sc2_SDKStructures.h  sc2_camexport.h  sc2_common.h  sc2_defs.h  sc2_dialogexport.h  sc2_sdkstructures.h
include/PVCAM/: master.h  pvcam.h
include/ids_peak_comfort_c/: ids_peak_comfort_c.h  ids_peak_comfort_c_dynamic_loader.h
lib/win32/: ATMCD32M.LIB  pvcam32.lib
lib/win64/: SC2_Cam.lib  SeaBreeze.lib  atcorem.lib  atmcd64m.lib  atutilitym.lib  ids_peak_comfort_c.lib  ippcoremt.lib
resources/: SCCameraXOP.rc  SCCameraXOPWinCustom.rc
src/: AndorCamera.cpp  AndorCamera.h  AndorSDK3APIWrapper.h  AndorSDK3Camera.cpp  AndorSDK3Camera.h  AndorSDK3CameraHandler.cpp  AndorSDK3CameraHandler.h  BaseCameraClass.cpp  BaseCameraClass.h  CameraManager.cpp  CameraManager.h  CameraPropertiesEncoding.cpp  CameraPropertiesEncoding.h  DummyCamera.cpp  DummyCamera.h  Exceptions.h  HamamatsuAPIWrapper.cpp  HamamatsuAPIWrapper.h  HamamatsuCamera.cpp  HamamatsuCamera.h  HamamatsuCameraHandler.cpp  HamamatsuCameraHandler.h  IDSCamera.cpp  IDSCamera.h  IDSPeakAPIWrapper.h  IDSPeakCamera.cpp  IDSPeakCamera.h  IDSPeakCameraHandler.cpp  IDSPeakCameraHandler.h  ImageProcessingUtils.cpp  ImageProcessingUtils.h  ImageRecycler.cpp  ImageRecycler.h  OceanOpticsCamera.cpp  OceanOpticsCamera.h  PCOAPIWrapper.cpp  PCOAPIWrapper.h  PCOCamera.cpp  PCOCamera.h  PhotometricsAPIWrapper.cpp  (+20 more)
subprojects/: imagerplugincore.wrap
